<resources>
    <string name="app_name">GreenRoom</string>
    <string name="util_add">추가</string>
    <string name="util_go_next">건너뛰기</string>
    <string name="util_go_home">홈으로</string>
    <string name="util_next">다음</string>
    <string name="util_nothing">없음</string>
    <string name="util_take_picture">사진 촬영</string>
    <string name="util_my_album">내 앨범 선택</string>
    <string name="util_delete">삭제</string>
    <string name="util_choose_date">날짜 선택하기</string>
    <string name="nickname">닉네임</string>
    <string name="user_nickname_rule">한글 또는 영문, 10자 이내로 가능해요</string>
    <string name="confirm">확인</string>
    <string name="util_dismiss">닫기</string>
    <string name="util_edit">편집</string>
    <string name="util_more">더보기</string>
    <string name="util_detail">자세히</string>
    <string name="util_fail">fail</string>
    <string name="util_retry">다시 시도해주세요</string>
    <string name="confirm_long">확인했어요</string>
    <string name="util_plant_name">식물 이름</string>
    <string name="dialog_not_yet">아직이에요</string>
    <string name="dialog_complete_all_title">모두 완료</string>
    <string name="dialog_complete_all_ask">모든 할 일을 완료했나요?</string>
    <string name="dialog_complete_all_confirm">완료했어요</string>
    <string name="watering_text_balloon">물이 필요해</string>
    <string name="dialog_watering_title">물주기</string>
    <string name="dialog_watering_ask">식물에게 물을 줬나요?</string>
    <string name="dialog_watering_confirm">물을 줬어요</string>
    <string name="repot_text_balloon">분갈이가 필요해</string>
    <string name="dialog_repot_title">분갈이</string>
    <string name="dialog_repot_ask">식물의 화분을 교체했나요?</string>
    <string name="dialog_repot_confirm">교체했어요</string>
    <string name="pruning_text_balloon">가지치기가 필요해</string>
    <string name="dialog_pruning_title">가지치기</string>
    <string name="dialog_pruning_ask">식물의 가지를 다듬었나요?</string>
    <string name="dialog_pruning_confirm">다듬었어요</string>
    <string name="nutrition_text_balloon">영양관리가 필요해</string>
    <string name="dialog_nutrition_title">영양관리</string>
    <string name="dialog_nutrition_ask">식물에게 영양분을 공급했나요?</string>
    <string name="dialog_nutrition_confirm">공급했어요</string>
    <string name="ventilation_text_balloon">환기가 필요해</string>
    <string name="dialog_ventilation_title">환기</string>
    <string name="dialog_ventilation_ask">식물이 있는 공간을 환기했나요?</string>
    <string name="dialog_ventilation_confirm">환기했어요</string>
    <string name="google_web_client_id">712990012729-kc9m2p6a9oltejsul1dvseh0mj8d8b66.apps.googleusercontent.com</string>
    <string name="google_android_client_id">712990012729-smbduqfeoqvphohd0gcphdi27f7b10p1.apps.googleusercontent.com</string>
    <string name="register_nickname_welcome_title">그린룸에 오신 걸 환영해요!\n닉네임을 설정해 주세요</string>
    <string name="login_onboarding2_title">나만의 식물을 커스텀해요\n내 식물과 닮은 캐릭터를 만들어 보세요</string>
    <string name="login_onboarding2_subtitle">소품과 악세사리로 그린룸을 꾸며주세요.</string>
    <string name="login_onboarding3_title">이젠 까먹지 않아요.\n캐릭터가 알려주는 관리 주기</string>
    <string name="login_onboarding3_subtitle">미션처럼 식물을 관리하면서 쉽고 재미있게 식물을 키워요.</string>
    <string name="login_onboarding4_title">식물 집사 생활을 한 눈에 살펴요\n할 일을 모아보고, 상태를 기록해요</string>
    <string name="login_onboarding4_subtitle">다이어리에서 식물을 관리하고 일기를 써보세요.</string>
    <string name="tutorial_start">튜토리얼 시작</string>
    <string name="tutorial_start_guide">약 20초 소요</string>
    <string name="tutorial_start_dialog_skip">튜토리얼을 건너뛸까요?</string>
    <string name="tutorial_start_script">환영해요! 저는 그린이에요\n그린룸이 처음인 당신을 도와드릴게요</string>
    <string name="tutorial_character_name">그린이</string>
    <string name="tutorial_script1">여기 당신이 등록한 식물이 있네요</string>
    <string name="tutorial_script2">앗, 지금 식물이 물이 필요한가봐요! </string>
    <string name="tutorial_script3">말풍선을 터치해 식물에게 물을 주세요.</string>
    <string name="tutorial_script4">와~ 물주기를 완료해서 씨앗 3개를 얻었어요!</string>
    <string name="tutorial_script5">이제부터 나만의 식물을 등록하고 키워보세요.\n씨앗을 많이 얻으면 좋은 일이 일어날지도..?</string>
    <string name="tutorial_go_start">시작하기</string>
    <string name="home">홈</string>
    <string name="green_room_empty_no_plant_msg">키우는 식물이 없어요.\n나의 식물을 등록할까요?</string>
    <string name="green_room_empty_register_plant">나의 식물 등록하기</string>
    <string name="home_my_plant_text">나의 식물</string>
    <string name="home_bottom_sheet_memo_guide">자유롭게 메모해 보세요.</string>
    <string name="home_level_up_title">레벨업</string>
    <string name="home_action_decorate">꾸미기</string>
    <string name="home_action_all_complete">모두 완료</string>
    <string name="home_dialog_all_complete_title">모두 완료</string>
    <string name="home_dialog_ask_complete_all">모든 할 일을 완료했나요?</string>
    <string name="home_dialog_not_yet">아직이에요</string>
    <string name="home_dialog_complete_all">완료했어요</string>
    <string name="home_snack_bar_msg_head">씨앗을</string>
    <string name="home_snack_bar_msg_tail">얻었어요</string>
    <string name="plant_registration_what_kind">어떤 식물을 키우세요?</string>
    <string name="plant_registration_search_hint">식물 이름 또는 품종 검색</string>
    <string name="plant_registration_best_plant">가장 많이 키우는 식물 TOP10</string>
    <string name="plant_registration_no_data">앗, 아직 등록되지 않은 식물이에요</string>
    <string name="plant_registration_no_data_comment">키우는 식물이 여기 없다면?</string>
    <string name="plant_registration_curious_yours">당신의 식물이 궁금해요!</string>
    <string name="plant_registration_plant_nickname">별명*</string>
    <string name="plant_registration_nickname_warning">한글 또는 영문, 10자 이내로 가능해요.</string>
    <string name="plant_registration_nickname_duplicate">이미 같은 별명의 식물을 키워요</string>
    <string name="plant_registration_nickname_hint">그린이</string>
    <string name="plant_registration_registration_picture">사진을 등록할까요?</string>
    <string name="plant_registration_post_representative">내 식물을 대표하는 사진을 올려주세요!(선택)</string>
    <string name="plant_registration_regist">내 식물을 대표하는 사진을 올려주세요!(선택)</string>
    <string name="plant_registration_count_picture_num">(0/1)</string>
    <string name="plant_registration_cycle_today">오늘</string>
    <string name="plant_registration_cycle_yesterday">어제</string>
    <string name="plant_registration_water_cycle">물을 며칠 간격으로 줄까요?</string>
    <string name="plant_registration_water_cycle_standard">을 기준으로</string>
    <string name="plant_registration_water_cycle_standard_datea">%d/%d/%d</string>
    <string name="plant_registration_water_cycle_input">일 간격으로 물을 줄래요.</string>
    <string name="plant_registration_water_cycle_tip">물주기 꿀팁!</string>
    <string name="plant_registration_water_cycle_detail">키우는 환경에 맞는 물 주기를 알려주세요.</string>
    <string name="plant_registration_water_last">%s에게\n언제 마지막으로 물을 줬나요?</string>
    <string name="plant_registration_character">식물이 어떤 모습을 하고 있나요?</string>
    <string name="plant_registration_character_detail">나중에 변경할 수 있어요</string>
    <string name="plant_registration_character_type">종류</string>
    <string name="plant_registration_complete">%s을(를) 그린룸에\n추가했어요!</string>
    <string name="plant_registration_complete_mention">초대해줘서 고마워!</string>
    <string name="decoration_title">꾸미기</string>
    <string name="decoration_plant_shape">형태</string>
    <string name="decoration_plant_accessory">악세사리</string>
    <string name="decoration_background_accessory">배경</string>
    <string name="decoration_level_limit">레벨 %d</string>
    <string name="collection">컬렉션</string>
    <string name="collection_plant_dictionary">식물사전</string>
    <string name="collection_main_name">%s의 컬렉션</string>
    <string name="collection_main_all_plant">전체 식물 %d</string>
    <string name="collection_main_living_plant">키우고 있는 식물 %d</string>
    <string name="collection_main_dead_plant">수명을 다한 식물 %d</string>
    <string name="collection_main_latest_sort">최근 추가 순</string>
    <string name="collection_main_oldest_sort">오래된 순</string>
    <string name="collection_detail_time_together">그림룸과 %d일째</string>
    <string name="collection_detail_no_species">미등록</string>
    <string name="collection_detail_memo_hint">자유롭게 메모해 보세요.</string>
    <string name="collection_detail_period">%d일 간격</string>
    <string name="collection_detail_deadline">(다음 %s까지 %3)</string>
    <string name="collection_detail_cycle">관리 주기</string>
    <string name="collection_detail_information">식물 정보</string>
    <string name="collection_detail_know_how">키우는 법</string>
    <string name="collection_detail_management">관리</string>
    <string name="collection_detail_temperature">온도</string>
    <string name="collection_detail_sun">햇빛</string>
    <string name="collection_detail_watering">물주기</string>
    <string name="collection_detail_moisture">습도</string>
    <string name="collection_detail_fertilizer">비료</string>
    <string name="collection_memo_title">메모하기</string>
    <string name="collection_memo_hint">30자 이내로 자유롭게 메모해 보세요</string>
    <string name="collection_memo_count">(%d/30)</string>
    <string name="collection_memo_complete">메모 완료</string>
    <string name="community">커뮤니티</string>
    <string name="community_tab_suggest">건의해요</string>
    <string name="community_tab_boast">자랑해요</string>
    <string name="community_tab_green_ranking">그린랭킹</string>
    <string name="community_suggest_btn">원하는 식물 건의하기</string>
    <string name="community_not_ready">아직 준비중인 서비스예요.\n조만간 찾아올게요!</string>
    <string name="community_suggest_new_plant_title">이번주, 새로 추가된 식물</string>
    <string name="community_suggest_update_date">%s 업데이트</string>
    <string name="community_suggest_current_suggested_plants_title">실시간 건의된 식물</string>
    <string name="community_suggest_waiting_message">함께할 날을 조금만 기다려 주세요!</string>
    <string name="community_register_plant_title">그린룸에\n어떤 식물이 있으면 좋을까요?</string>
    <string name="community_register_plant_hint">그린룸에 추가하고 싶은 식물</string>
    <string name="community_register_plant_confirm">건의하기</string>
    <string name="community_register_plant_sub_message">관리자가 알아볼 수 있도록 사진을 올려주세요! (선택)</string>
    <string name="community_register_plant_error_msg">이미 그린룸에 등록된 식물이에요.</string>
    <string name="community_register_complete_title">소중한 의견 감사합니다</string>
    <string name="community_register_complete_sub">더 만족스러운 서비스를 위해\n빠른 시일 내에 반영하겠습니다.</string>
    <string name="diary">다이어리</string>
    <string name="all">전체</string>
    <string name="foliage">관엽식물</string>
    <string name="succeulent_cactus">다육이,선인장</string>
    <string name="annual">한해살이풀</string>
    <string name="vine">덩굴식물</string>
    <string name="bulb">구근식물</string>
    <string name="herb">허브</string>
    <string name="epiphyte">착색식물</string>
    <string name="tuberous">괴근식물</string>
    <string name="other">기본식물</string>
    <string name="head">머리핀</string>
    <string name="eye">안경</string>
    <string name="face">표정</string>
    <string name="back_left">창문 소품</string>
    <string name="back_right">선반 소품</string>
    <string name="my_page_title">마이 페이지</string>
    <string name="my_page_until_next_level">다음 레벨까지 </string>
    <string name="my_page_usage_days">그린룸과 함께한지</string>
    <string name="my_page_setting">설정</string>
    <string name="my_page_setting_push">푸시 알림 설정</string>
    <string name="my_page_terms_of_use">이용약관</string>
    <string name="my_page_terms_of_service">서비스 이용약관</string>
    <string name="my_page_etc">기타</string>
    <string name="my_page_suggest_to_developer">개발팀에 건의하기</string>
    <string name="my_page_app_version">앱 버전 %1$s</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_withdraw"><u>회원탈퇴</u></string>
    <string name="my_page_next_reward_guide">다음 레벨, Lv.%1$d의 보상</string>
    <string name="my_page_rank_list">등급표</string>
    <string name="my_page_save_change">변경 사항 저장</string>
    <string name="my_page_push">푸시 알림</string>
    <string name="my_page_push_cycle_title">식물 주기 알림</string>
    <string name="my_page_push_cycle_detail">식물 주기에 대한 알림을 받아요.</string>
    <string name="my_page_my_grade">%1$s · Lv.%2$d</string>
    <string name="my_page_push_notice_title">공지사항 알림</string>
    <string name="my_page_push_notice_detail">새로운 공지사항에 대한 알림을 받아요.</string>
    <string name="my_page_logout_msg">정말 로그아웃 할까요?</string>
</resources>