<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/collectionFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_collection"
        android:title="@string/collection"/>

    <item
        android:id="@+id/communityFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_community"
        android:title="@string/community"/>

    <item
        android:id="@+id/diaryFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_diary"
        android:title="@string/diary"/>
</menu>
