<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/registration_background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tutorial_start_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/util_go_next"
            android:textAppearance="@style/body4"
            android:textColor="@color/gray600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ly_tutorial_start_text_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_corner_white_16"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintVertical_bias="9.0"
            app:layout_constraintEnd_toEndOf="@id/gl_tutorial_start_end"
            app:layout_constraintStart_toStartOf="@id/gl_tutorial_start_begin"
            app:layout_constraintBottom_toBottomOf="@id/iv_tutorial_start_greeny"
            app:layout_constraintTop_toTopOf="@+id/iv_tutorial_start_greeny">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_character_name"
                android:textAppearance="@style/body5"
                android:textColor="@color/green300" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_tutorial_start_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/tutorial_start_script"
                android:textAppearance="@style/body4"
                android:textColor="@color/gray700" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_tutorial_start_greeny"
            android:layout_width="136.09dp"
            android:layout_height="114.44dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/img_greeny_wink"
            app:layout_constraintBottom_toTopOf="@id/tv_tutorial_start_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_tutorial_start_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:drawableStart="@drawable/ic_baseline_access_time"
            android:drawablePadding="3dp"
            android:drawableTint="@color/green300"
            android:text="@string/tutorial_start_guide"
            android:textAppearance="@style/body4"
            android:textColor="@color/green300"
            app:layout_constraintBottom_toTopOf="@id/btn_tutorial_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tutorial_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_all_8_no_stroke"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/tutorial_start"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_tutorial_start_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/grid_system_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_tutorial_start_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/grid_system_end" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>