<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/green200"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tl_community_main"
            app:layout_constraintBottom_toBottomOf="@id/tl_community_main"
            android:id="@+id/view_community_tab_background"/>
        <com.google.android.material.tabs.TabLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tl_community_main"
            app:layout_constraintTop_toTopOf="parent"
            app:tabGravity="fill"
            android:layout_marginStart="10dp"
            app:tabPadding="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@android:color/transparent"
            app:tabTextAppearance="@style/body1"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/green100"
            app:layout_constraintStart_toStartOf="parent"
            >
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ti_community_main_suggest"
                android:text="@string/community_tab_suggest"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ti_community_main_boast"
                android:text="@string/community_tab_boast"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ti_community_main_green_ranking"
                android:text="@string/community_tab_green_ranking"/>
        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/vp_community_main"
            app:layout_constraintTop_toBottomOf="@id/tl_community_main"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
