<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_corner_white_16">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dialog_complete_todo_all_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/home_dialog_all_complete_title"
            android:textAlignment="center"
            android:textAppearance="@style/body4"
            android:textColor="@color/gray400"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dialog_complete_todo_all_advice_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/home_dialog_ask_complete_all"
            android:textAlignment="center"
            android:textAppearance="@style/body1"
            android:textColor="@color/gray700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_complete_todo_all_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_complete_todo_all_not_yet"
            style="@style/rounded_corner_8_gray100_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/padding_button_default_horizontal"
            android:paddingTop="@dimen/padding_button_default_vertical"
            android:paddingEnd="@dimen/padding_button_default_horizontal"
            android:paddingBottom="@dimen/padding_button_default_vertical"
            android:text="@string/home_dialog_not_yet"
            android:textAppearance="@style/body4"
            android:textColor="@color/gray400"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_dialog_complete_todo_all_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_complete_todo_all_advice_msg"
            app:layout_constraintWidth_default="wrap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_complete_todo_all_confirm"
            style="@style/rounded_corner_8_green200_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/effect_ripple_btn"
            android:paddingStart="@dimen/padding_button_default_horizontal"
            android:paddingTop="@dimen/padding_button_default_vertical"
            android:paddingEnd="@dimen/padding_button_default_horizontal"
            android:paddingBottom="@dimen/padding_button_default_vertical"
            android:text="@string/home_dialog_complete_all"
            android:textAppearance="@style/body4"
            app:layout_constraintBottom_toBottomOf="@+id/btn_dialog_complete_todo_all_not_yet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_complete_todo_all_not_yet"
            app:layout_constraintTop_toTopOf="@id/btn_dialog_complete_todo_all_not_yet"
            app:layout_constraintWidth_default="wrap" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>